allow unfinished job to appear in job run execution summary
